fixed images on mobile gallery

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -573,4 +573,21 @@ section.container { background-color: #fff; }
         height: 220px;  /* altezza più compatta su mobile */
     }
 }
+/* GALLERY IMAGES */
+.gallery-img {
+    width: 100%;
+    height: 250px; /* desktop */
+    object-fit: cover;
+    cursor: pointer;
+}
+
+/* MOBILE */
+@media (max-width: 576px) {
+    .gallery-img {
+        height: auto; /* quadrate: 4 colonne */
+        aspect-ratio: 1 / 1;
+        padding: -10px;
+    }
+}
+
 
